--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "d-chat",
-  "name": "d-chat - Decentralized communication",
+  "short_name": "connect-ed",
+  "name": "ConnectED",
   "icons": [
     {
       "src": "favicon.ico",
