--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": "11.10.0"
   },
   "dependencies": {
+    "@material-ui/styles": "^4.11.3",
     "bootstrap": "^4.3.1",
     "browserify": "^16.2.3",
     "fs-extra": "^7.0.1",
