--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "dependencies": {
     "@material-ui/styles": "^4.11.3",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.0",
     "browserify": "^16.2.3",
     "fs-extra": "^7.0.1",
     "pull-file-reader": "^1.0.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "2.1.3",
-    "reactstrap": "8.0.0",
+    "reactstrap": "^8.9.0",
     "terser": "^4.3.1",
     "toasted-notes": "^2.1.5"
   },
