--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pull-file-reader": "^1.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "reactstrap": "^8.9.0",
     "terser": "^4.3.1",
