--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@material-ui/styles": "^4.11.3",
     "bootstrap": "^4.6.0",
     "browserify": "^16.2.3",
+    "divider": "^0.1.1",
     "fs-extra": "^7.0.1",
+    "list": "^2.0.19",
+    "material-ui": "^0.20.2",
     "pull-file-reader": "^1.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-list": "^0.8.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "reactstrap": "^8.9.0",
+    "style": "0.0.3",
     "terser": "^4.3.1",
-    "toasted-notes": "^2.1.5"
+    "toasted-notes": "^2.1.5",
+    "typography": "^0.16.19"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
