--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs-extra": "^7.0.1",
     "list": "^2.0.19",
     "material-ui": "^0.20.2",
+    "progressbar": "^1.3.0",
     "pull-file-reader": "^1.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
