--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "browserify": "^16.2.3",
     "divider": "^0.1.1",
     "fs-extra": "^7.0.1",
+    "input": "^1.0.1",
     "list": "^2.0.19",
     "material-ui": "^0.20.2",
+    "mdbreact": "^5.0.2",
     "progressbar": "^1.3.0",
     "pull-file-reader": "^1.0.2",
     "react": "^16.14.0",
