--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "browserify": "^16.2.3",
     "divider": "^0.1.1",
+    "firebase": "^8.4.1",
     "fs-extra": "^7.0.1",
     "input": "^1.0.1",
     "list": "^2.0.19",
@@ -28,6 +29,7 @@
     "style": "0.0.3",
     "terser": "^4.3.1",
     "toasted-notes": "^2.1.5",
+    "typescript": "^4.2.4",
     "typography": "^0.16.19"
   },
   "scripts": {
