--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "browserify": "^16.2.3",
     "divider": "^0.1.1",
+    "firebase": "^8.4.1",
     "fs-extra": "^7.0.1",
     "input": "^1.0.1",
     "list": "^2.0.19",
