--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.4.1",
     "fs-extra": "^7.0.1",
     "input": "^1.0.1",
+    "jquery": "^3.6.0",
     "list": "^2.0.19",
     "material-ui": "^0.20.2",
     "mdbreact": "^5.0.2",
