--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typography": "^0.16.19"
   },
   "scripts": {
+    "build": "react-scripts --max_old_space_size=4096 build",
     "start": "react-scripts --max_old_space_size=4096 start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
